--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -107,6 +107,7 @@ solana-rent-collector = { workspace = true }
 solana-rent-debits = { workspace = true }
 solana-reward-info = { workspace = true }
 solana-runtime-transaction = { workspace = true }
+solana-rpc-client = { workspace = true, optional = true }
 solana-sdk = { workspace = true, features = ["full"] }
 solana-sdk-ids = { workspace = true }
 solana-sdk-macro = { workspace = true }
@@ -180,12 +181,14 @@ test-case = { workspace = true }
 targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
+default = ["rpc-fallback"]
 dev-context-only-utils = [
     "dep:solana-system-program",
     "solana-svm/dev-context-only-utils",
     "solana-runtime-transaction/dev-context-only-utils",
     "solana-vote/dev-context-only-utils",
 ]
+rpc-fallback = ["dep:solana-rpc-client"]
 frozen-abi = [
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
